--- a/app/src/main/res/layout/activity_cliente_comprobante_qr.xml
+++ b/app/src/main/res/layout/activity_cliente_comprobante_qr.xml
@@ -72,12 +72,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ESCANEAR QR DE PAGO"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:backgroundTint="@color/btn_medium"
             android:textColor="@android:color/white"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="12dp"
-            android:layout_margin="16dp"
+            android:fontFamily="@font/sen_font"
+            android:layout_margin="24dp"
             android:padding="14dp"
             android:textStyle="bold"/>
     </LinearLayout>
