--- a/app/src/main/res/layout/activity_cliente_compra_details.xml
+++ b/app/src/main/res/layout/activity_cliente_compra_details.xml
@@ -9,181 +9,161 @@
     tools:context=".activity.cliente.ClienteCompraDetailsActivity"
     android:background="@color/white">
 
-    <LinearLayout
+
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="12dp">
 
-        <!-- Header con botón de regresar y título -->
-        <LinearLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btnBack"
+            style="?attr/materialIconButtonFilledTonalStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:padding="12dp">
+            app:icon="@drawable/baseline_arrow_back_ios_new_24"
+            android:contentDescription="@string/btnBack"
+            android:backgroundTint="@color/bg_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-            <!-- Botón de regresar (flecha) -->
-            <Button
-                style="?attr/materialIconButtonFilledTonalStyle"
-                android:id="@+id/btnBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon="@drawable/baseline_arrow_back_ios_new_24"
-                android:contentDescription="@string/btnBack"
-                android:backgroundTint="@color/bg_color"/>
+        <TextView
+            android:id="@+id/tvEstado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Detalle de compra"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/sen_font"/>
 
-            <!-- Texto "Resumen de pedido" -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Detalles de compra"
-                android:textSize="20sp"
-                android:fontFamily="@font/sen_font">
-            </TextView>
-        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Contenido desplazable -->
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingHorizontal="16dp">
+            android:paddingHorizontal="18dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="28dp">
 
-            <!-- Dirección de destino -->
+            <!-- Información del cliente  -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cliente:"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginBottom="18dp"/>
+
+
+            <!-- locacion -->
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="4dp">
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_location"
+                    app:tint="@color/btn_dark"/>
+
+                <TextView
+                    android:id="@+id/tvAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Av. La mar 25 urb santa catalina"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/sen_font"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+
+
+            <!-- Divisor entre ítems -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="18dp"
+                android:background="@color/gray_light"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Orden:"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginVertical="8dp"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/orderItemsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/rounded_box">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <!-- Encabezado de dirección -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:padding="8dp">
-
-                        <!-- Título de dirección -->
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="DIRECCION DESTINO"
-                            android:textColor="@android:color/darker_gray"
-                            android:fontFamily="@font/sen_font"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                android:layout_marginBottom="18dp"/>
 
 
-                    </LinearLayout>
-
-                    <!-- Dirección destino actual -->
-                    <TextView
-                        android:id="@+id/tvAddress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/search_view_bg"
-                        android:padding="12dp"
-                        android:text="2118 Thornridge Cir. Syracuse"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-
-            <!-- Detalles del pedido -->
-            <LinearLayout
+            <!-- Divisor entre ítems -->
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/rounded_box">
+                android:layout_height="1dp"
+                android:layout_marginVertical="18dp"
+                android:background="@color/gray_light"/>
 
-                <!--  Encabezado del pedido -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="8dp"
-                        android:gravity="center_vertical">
-
-                        <!-- Título del restaurante -->
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="BURGER BISTRO"
-                            android:textSize="16sp"
-                            android:fontFamily="@font/sen_font"
-                            android:textStyle="bold"
-                            android:textColor="@android:color/darker_gray"
-                            android:layout_weight="1" />
-
-                    </LinearLayout>
-
-
-                    <!-- Productos del pedido -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="8dp">
-
-                        <!-- RecyclerView para Detalles del pedido -->
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/orderItemsRecyclerView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"/>
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cuenta:"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginVertical="14dp"/>
 
             <!-- Resumen de costos -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="8dp"
-                android:background="@drawable/rounded_box">
+                android:padding="4dp">
 
                 <!-- Total consumo -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="4dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="Total consumo:"
-                        android:textSize="16sp"
                         android:fontFamily="@font/sen_font"
                         android:textColor="@android:color/darker_gray"
-                        android:layout_weight="1" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/tvTotalConsumo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="S/. 281.20"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black" />
-
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="S/. 96"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <!-- Delivery -->
@@ -191,68 +171,70 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="Delivery:"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/sen_font"
                         android:textColor="@android:color/darker_gray"
-                        android:layout_weight="1" />
+                        android:fontFamily="@font/sen_font"
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/tvDelivery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="S/. 15.00"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="S/. 15"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
-                <!-- Total pago -->
+                <!-- Total -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:paddingVertical="12dp"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Total pago:"
-                        android:textSize="16sp"
+                        android:layout_weight="1"
+                        android:text="TOTAL DE PAGO:"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"
                         android:fontFamily="@font/sen_font"
-                        android:textColor="@android:color/darker_gray"
-                        android:layout_weight="1" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tvTotalPago"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="S/. 296.20"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="S/. 100"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btnConfirmEntrega"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CONFIRMAR ENTREGA"
+                android:textSize="16sp"
+                android:backgroundTint="@color/btn_medium"
+                android:textColor="@android:color/white"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginVertical="24dp"
+                android:layout_marginHorizontal="6dp"
+                android:padding="14dp"
+                android:textStyle="bold"
+                android:visibility="invisible"/>
+
         </LinearLayout>
-
-
-        <Button
-            android:id="@+id/btnConfirmEntrega"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CONFIRMAR ENTREGA"
-            android:textSize="18sp"
-            android:backgroundTint="@color/btn_medium"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="16dp"
-            android:layout_margin="16dp"
-            android:padding="16dp"
-            android:textStyle="bold"
-            android:visibility="invisible"/>
-
-    </LinearLayout>
-
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
