eliminar pedido en cliente

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,6 +52,7 @@
     <color name="peach_puff">#FFFFDAB9</color>
     <color name="sandy_brown">#FFF4A460</color>
     <color name="sienna">#FFA0522D</color>
+    <color name="red_light">#FFCDD2</color>
 
 
     <!-- Primary Colors -->
